guava changes