@@ -1,9 +1,5 @@
 package io.polyglotted.common.test;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
-import com.google.common.net.InetAddresses;
 import io.polyglotted.common.model.GeoPoint;
 import io.polyglotted.common.model.GeoShape;
 import io.polyglotted.common.model.GeoType;
@@ -36,9 +32,14 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
+import static io.polyglotted.common.model.AuthToken.tokenBuilder;
 import static io.polyglotted.common.model.MapResult.simpleResult;
 import static io.polyglotted.common.model.SortedMapResult.treeResult;
+import static io.polyglotted.common.model.Subject.subjectBuilder;
 import static io.polyglotted.common.test.BaseSerializerTest.MyConst.BAZ;
+import static io.polyglotted.common.util.ListBuilder.immutableList;
+import static io.polyglotted.common.util.ListBuilder.immutableSet;
+import static io.polyglotted.common.util.MapBuilder.immutableMap;
 import static io.polyglotted.common.util.UuidUtil.uuidFrom;
 import static java.time.ZoneOffset.UTC;
 import static org.hamcrest.MatcherAssert.assertThat;
@@ -49,21 +50,31 @@ public class BaseSerializerTest extends BaseSerializer {
 
     public static Object[][] objInputs() throws Exception {
         return new Object[][]{
-            {new SimpleClass().aString("foo").anIp(InetAddresses.forString("172.0.0.1")).aUrl(new URL("http://www.google.com"))
-                .aUri(new URI("s3://foo.zing.com")).aUuid(uuidFrom("f57f7027-33c9-5173-a00f-8ae3cdd93ff4")).aBoolean(true)
-                .aGeoPoint(new GeoPoint(-90, 90)).aGeoShape(new GeoShape(GeoType.point, "-1.1", null))
-                .aBinary("foo".getBytes()).aBuffer(ByteBuffer.wrap("bar".getBytes())).aDateTime(ZonedDateTime.of(2016, 2, 15, 4, 30, 0, 0, UTC))
-                .bDateTime(OffsetDateTime.of(2016, 2, 15, 4, 30, 0, 0, UTC)).bTime(LocalTime.of(4, 30).atOffset(UTC)).aDate(LocalDate.of(2016, 2, 15))
-                .aTime(LocalTime.of(4, 30)).cDateTime(LocalDateTime.of(2016, 2, 15, 4, 30, 0, 0)).dDateTime(new Date(1455510600000L))
+            {
+                new SimpleClass().aString("foo").anIp(InetAddress.getByName("172.0.0.1")).aUrl(new URL("http://www.google.com"))
+                    .aUri(new URI("s3://foo.zing.com")).aUuid(uuidFrom("f57f7027-33c9-5173-a00f-8ae3cdd93ff4")).aBoolean(true)
+                    .aGeoPoint(new GeoPoint(-90, 90)).aGeoShape(new GeoShape(GeoType.point, "-1.1", null))
+                    .aBinary("foo".getBytes()).aBuffer(ByteBuffer.wrap("bar".getBytes())).aDateTime(ZonedDateTime.of(2016, 2, 15, 4, 30, 0, 0, UTC))
+                    .bDateTime(OffsetDateTime.of(2016, 2, 15, 4, 30, 0, 0, UTC)).bTime(LocalTime.of(4, 30).atOffset(UTC)).aDate(LocalDate.of(2016, 2, 15))
+                    .aTime(LocalTime.of(4, 30)).cDateTime(LocalDateTime.of(2016, 2, 15, 4, 30, 0, 0)).dDateTime(new Date(1455510600000L))
             },
-            {new Simplified().fullStr("foo").email("foo@bar.co").bigInt(BigInteger.TEN).date(1455510600000L).prim("tux")},
-            {new CollClass().booleanList(ImmutableList.of(true, false, true)).doubleList(ImmutableList.of(10.0, (double) 20, 30.0))
-                .longSet(ImmutableSet.of(5L, 2L)).dateSet(ImmutableSet.of(new Date(1455510600000L), new Date(1455510700000L)))
-                .localDates(ImmutableList.of(LocalDate.of(2016, 2, 15))).objectSet(ImmutableSet.of("foo", true, 2))
-                .stringIntegerMap(ImmutableMap.of("a", 1, "b", 2)).primMap(ImmutableMap.of("a", "foo", "b", 2, "c", false))
+            {
+                new Simplified().fullStr("foo").email("foo@bar.co").bigInt(BigInteger.TEN).date(1455510600000L).prim("tux")},
+            {
+                new CollClass().booleanList(immutableList(true, false, true)).doubleList(immutableList(10.0, (double) 20, 30.0))
+                    .longSet(immutableSet(5L, 2L)).dateSet(immutableSet(new Date(1455510600000L), new Date(1455510700000L)))
+                    .localDates(immutableList(LocalDate.of(2016, 2, 15))).objectSet(immutableSet("foo", true, 2))
+                    .stringIntegerMap(immutableMap("a", 1, "b", 2)).primMap(immutableMap("a", "foo", "b", 2, "c", false))
             },
-            {new RefClass().simplified(new Simplified().email("b@c.io")).simples(ImmutableList.of(new SimpleClass().aString("oui"),
-                new SimpleClass().aDate(LocalDate.of(2017, 1, 25)))).schemeMap(ImmutableMap.of(BAZ, new SimpleClass().anInt(25)))
+            {
+                new RefClass().simplified(new Simplified().email("b@c.io")).simples(immutableList(new SimpleClass().aString("oui"),
+                    new SimpleClass().aDate(LocalDate.of(2017, 1, 25)))).schemeMap(immutableMap(BAZ, new SimpleClass().anInt(25)))
+            },
+            {
+                subjectBuilder().usernameMd5("foo.bar.baz", "mister@misty.co").role("my_role1").metadata("mfaEnabled", false).build()
+            },
+            {
+                tokenBuilder().accessToken("y7nvAiCrpP8HRJkxgdb3s3T4").expiresIn(1200).tokenType("Bearer").refreshToken("fooBarBaz").build()
             },
         };
     }
@@ -88,8 +99,8 @@ public class BaseSerializerTest extends BaseSerializer {
     public static Object[][] jsonInputs() throws Exception {
         return new Object[][]{
             {"{\"fullStr\":null,\"date\":\"2016-02-15T04:30Z\"}", new Simplified().date(1455510600000L)},
-            {"{\"dateLongs\":[\"2016-02-15T04:30Z\"]}", new CollClass().dateLongs(ImmutableList.of(1455510600000L))},
-            {"{\"primMap\":{\"qux\":\"2016-02-15T04:30Z\"}}", new CollClass().primMap(ImmutableMap.of("qux", "2016-02-15T04:30Z"))},
+            {"{\"dateLongs\":[\"2016-02-15T04:30Z\"]}", new CollClass().dateLongs(immutableList(1455510600000L))},
+            {"{\"primMap\":{\"qux\":\"2016-02-15T04:30Z\"}}", new CollClass().primMap(immutableMap("qux", "2016-02-15T04:30Z"))},
         };
     }
 
